--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,16 +1,16 @@
-apply plugin: 'com.android.library'
+rootProject.name = 'react-native-pos-printer'
 
-def safeExtGet(prop, fallback) {
-    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
-}
+apply plugin: 'com.android.library'
+apply plugin: 'com.facebook.react'
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 30)
-    buildToolsVersion safeExtGet('buildToolsVersion', '30.0.2')
+    namespace "com.reactnativeposprinter"
+    compileSdkVersion android.compileSdkVersion
+    buildToolsVersion android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 21)
-        targetSdkVersion safeExtGet('targetSdkVersion', 30)
+        minSdkVersion android.minSdkVersion
+        targetSdkVersion android.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -35,7 +35,6 @@ android {
 repositories {
     mavenCentral()
     google()
-    jcenter()
 }
 
 dependencies {
